--- a/playerAnd/build.gradle
+++ b/playerAnd/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     compile 'com.github.travijuu:numberpicker:1.0.7'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.jakewharton.timber:timber:4.5.0'
+    compile 'com.jakewharton:butterknife:8.5.1'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
     testCompile 'junit:junit:4.12'
 }
