--- a/playerAnd/src/main/AndroidManifest.xml
+++ b/playerAnd/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity
             android:name=".act.GenActivity"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".act.DetailsActivity"
